# server/src/api/auth.js
@@ -1,10 +1,11 @@
+/* eslint-disable prettier/prettier */
 // libs
 import bcryptjs from 'bcryptjs';
 import { Router } from 'express';
 
 // modules
 // import passport from '../passport.js';
-import { newToken } from '../utils/auth.js';
+import { newToken, authenticateUser } from '../utils/auth.js';
 import UserModel from '../models/UserModel.js';
 
 // router init
@@ -12,7 +13,7 @@ const router = Router();
 
 // router
 router.post('/login', (req, res) => {
-	// find the user
+	// 요청죈 username이 데이터베이스에 있는지 찾는다.
 	UserModel.findOne({
 		username: req.body.username,
 	})
@@ -84,5 +85,91 @@ router.post('/signup', (req, res) => {
 });
 
 // TODO: Logout 구현 필요
+// router.put('/logout', async (req, res) => {
+// 	console.log(req, res);
+// 	try {
+// 		const updatedDoc = UserModel.findOneAndUpdate(
+// 			{
+// 				_id: req.user._id,
+// 				// token: '',
+// 			},
+// 			{
+// 				token: '',
+// 			},
+// 			req.body,
+// 			{ new: true }
+// 		)
+// 			.lean()
+// 			.exec();
+
+// 		if (!updatedDoc) {
+// 			return res.status(400).json({ message: 'cannot update the data' });
+// 		}
+// 		res.status(200).json({ ...updatedDoc });
+
+// 		// (err, user) => {
+// 		// if (err) return res.json({ success: false, err });
+// 		// return res.status(200).send({ success: true });
+// 		// }
+// 	} catch (e) {
+// 		console.error(error);
+// 		res.status(400).json({ message: 'sth wrong', error });
+// 	}
+// });
+
+// router.get('/logout', async (req, res, next) => {
+// 	try {
+// 		console.log('req.body', req.body.token);
+// 		// var token = req.token;
+// 		// if (token) {
+// 		// 	//세션정보가 존재하는 경우
+// 		// 	await req.token.destroy(function(err) {
+// 		// 		if (err) console.log(err);
+// 		// 		else {
+// 		// 			res.redirect('/');
+// 		// 		}
+// 		// 	});
+// 		// }
+// 	} catch (e) {
+// 		// console.log(e);
+// 	}
+// 	// res.redirect('/');
+// });
+
+app.get('/logout', authenticateUser, (req, res) => {
+	//미들웨어에서 가져옴
+	User.findOneAndUpdate({ username: req.body.username }, { token: '' }, (err, user) => {
+		if (err) return res.json({ success: false, err });
+		return res.status(200).send({
+			success: true,
+		});
+	});
+});
+
+// router.get('/logout', async function (req, res, next) {
+//   var session = req.session;
+//   try {
+//       if (session.user) { //세션정보가 존재하는 경우
+//           await req.session.destroy(function (err) {
+//               if (err)
+//                   console.log(err)
+//               else {
+//                 res.redirect('/');
+//               }
+//           })
+//       }
+//   }
+//   catch (e) {
+//     console.log(e)
+//   }
+// res.redirect('/');
+// })
+
+// router.get('/logout', (req, res) => {
+// 	UserModel.findOneAndUpdate({ _id: req.user._id }, { token: '' }, (err, user) => {
+// 		if (err) return res.json({ success: false, err });
+// 		return res.status(200).send({ success: true });
+// 	});
+// });
 
 export default router;
